--- a/TcpSocket/makefile
+++ b/TcpSocket/makefile
@@ -1,18 +1,22 @@
-OBJS = main.o TcpSocket.o
-CC = g++ -std=c++17 -Wno-psabi
+OBJS = main.o TcpSocket.o TcpListener.o
+CC = g++ -std=c++17
 CFLAGS = -Wall -c
 LFLAGS = -Wall
 LIBS = -lpthread
-binaries = theMain
+#INC = -I../Basic
+binaries = theMain.out
 
 main : $(OBJS)
 	$(CC) $(LFLAGS) $(OBJS) $(LIBS) -o $(binaries)
 
-main.o : main.cpp
+main.o : main.cpp Test_Socket.hpp
 	$(CC) $(CFLAGS) main.cpp
 
-TcpSocket.o: TcpSocket.h TcpSocket.cpp
+TcpSocket.o : TcpSocket.h TcpSocket.cpp
 	$(CC) $(CFLAGS) TcpSocket.cpp
+
+TcpListener.o : TcpListener.h TcpListener.cpp TcpSocket.h
+	$(CC) $(CFLAGS) TcpListener.cpp
 
 clean:
 	rm -f $(binaries) *.o
