--- a/File/makefile
+++ b/File/makefile
@@ -1,46 +1,18 @@
-OBJS = main.o
-OBJS += TcpListener.o TcpSocket.o
-OBJS += UdpListener.o UdpSocket.o
-OBJS += FileIOer.o FileBrowser.o
-OBJS += StringManipulator.o FileBrowserUdpListener.o
+SRC_DIR = .
+OBJ_DIR = ./Built
+SRC_FILES = $(wildcard $(SRC_DIR)/*.cpp)
+OBJ_FILES = $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
 CC = g++ -std=c++17
 CFLAGS = -Wall -c
 LFLAGS = -Wall
 LIBS = -lsqlite3 -lpthread
-binaries = theMain.out
+binaries = $(OBJ_DIR)/theMain.out
 
-main : $(OBJS)
-	$(CC) $(LFLAGS) $(OBJS) $(LIBS) -o $(binaries)
+main: $(OBJ_FILES)
+   $(CC) $(LFLAGS) $(OBJ_FILES) $(LIBS) -o $@ $^
 
-main.o : main.cpp Test.hpp
-	$(CC) $(CFLAGS) main.cpp
-
-Sqlite3.o : Sqlite3.h Sqlite3.cpp
-	$(CC) $(CFLAGS) Sqlite3.cpp
-
-TcpListener.o: ../TcpSocket/TcpListener.h ../TcpSocket/TcpListener.cpp
-	$(CC) $(CFLAGS) ../TcpSocket/TcpListener.cpp
-
-TcpSocket.o: ../TcpSocket/TcpSocket.h ../TcpSocket/TcpSocket.cpp
-	$(CC) $(CFLAGS) ../TcpSocket/TcpSocket.cpp
-
-UdpListener.o: ../UdpSocket/UdpListener.h ../UdpSocket/UdpListener.cpp
-	$(CC) $(CFLAGS) ../UdpSocket/UdpListener.cpp
-
-UdpSocket.o: ../UdpSocket/UdpSocket.h ../UdpSocket/UdpSocket.cpp
-	$(CC) $(CFLAGS) ../UdpSocket/UdpSocket.cpp
-
-FileIOer.o: FileIOer.h FileIOer.cpp
-	$(CC) $(CFLAGS) FileIOer.cpp
-
-FileBrowser.o: FileBrowser.h FileBrowser.cpp
-	$(CC) $(CFLAGS) FileBrowser.cpp
-
-StringManipulator.o: ../StringManipulator/StringManipulator.h ../StringManipulator/StringManipulator.cpp
-	$(CC) $(CFLAGS) ../StringManipulator/StringManipulator.cpp
-
-FileBrowserUdpListener.o: FileBrowserUdpListener.h FileBrowserUdpListener.cpp
-	$(CC) $(CFLAGS) FileBrowserUdpListener.cpp
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+   $(CC) $(CFLAGS) $(OBJ_FILES).o -c -o $@ $<
 
 clean:
-	rm -f $(binaries) *.o
+	rm -f $(binaries) $(OBJ_DIR).o
