--- a/Sqlite/.vscode/settings.json
+++ b/Sqlite/.vscode/settings.json
@@ -56,6 +56,7 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "variant": "cpp"
     }
 }
