--- a/ServerClientITC/.vscode/settings.json
+++ b/ServerClientITC/.vscode/settings.json
@@ -4,5 +4,6 @@
         "chrono": "cpp",
         "ratio": "cpp",
         "string": "cpp"
-    }
+    },
+    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
