--- a/Trie2/.vscode/settings.json
+++ b/Trie2/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string_view": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "chrono": "cpp"
     }
 }
