--- a/Trie2/.vscode/settings.json
+++ b/Trie2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "string_view": "cpp",
         "iosfwd": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "*.tcc": "cpp"
     }
 }
